added google site verification and metadata

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,14 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>DJZ Mushroom Farm</title>
+    <meta
+      content="Kennett Square Mushroom Farms offering mushrooms for retail and whlesale consumption"
+      name="description"
+    />
+    <meta
+      content="mushroom farm near me, Kennett Square mushroom, Wholesale Kennett Square mushroom farm, Retail Kennett Square mushroom farm, Bulk Kennett Square mushroom farm, mushrooms, mushroom farm"
+      name="keywords"
+    />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -33,6 +41,10 @@
     />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <meta
+      name="google-site-verification"
+      content="emw2MBIeN3_1Nejn2NUr2tBNMyDcPHxfCebXtuaH-Uc"
+    />
   </head>
   <body id="page-top">
     <!-- Bootstrap core JS-->
