--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+
+    <meta name="author" content="Laura Kraman" />
     <title>DJZ Mushroom Farm</title>
     <meta
       content="Kennett Square Mushroom Farms offering mushrooms for retail and whlesale consumption"
