--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta name="author" content="Laura Kraman" />
     <title>DJZ Mushroom Farm</title>
+    <meta
+      content="Kennett Square Mushroom Farms offering mushrooms for retail and whlesale consumption"
+      name="description"
+    />
+    <meta
+      content="mushroom farm near me, Kennett Square mushroom, Wholesale Kennett Square mushroom farm, Retail Kennett Square mushroom farm, Bulk Kennett Square mushroom farm, mushrooms, mushroom farm"
+      name="keywords"
+    />
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -42,18 +34,17 @@
       rel="stylesheet"
       type="text/css"
     />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,700;1,400;1,600&display=swap"
-      rel="stylesheet"
-    />
     <!-- Third party plugin CSS-->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="styles.css" rel="stylesheet" />
+    <link href="css/styles.css" rel="stylesheet" />
+    <meta
+      name="google-site-verification"
+      content="emw2MBIeN3_1Nejn2NUr2tBNMyDcPHxfCebXtuaH-Uc"
+    />
   </head>
   <body id="page-top">
     <noscript>You need to enable JavaScript to run this app.</noscript>
